tests/.test-projects/projects/syntax-error/run/bundler.js
export const run = 'echo bundling
